--- a/desafios/d10/index.html
+++ b/desafios/d10/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style/style.css">
     <title>Projeto - Site</title>
 </head>
 <body>
@@ -40,7 +40,7 @@
 
             <picture>
                 <source media="(max-width: 670px)" srcset="imagens/dan-droids-pq.png">
-                <img src="/imagens/dan-droids.png" alt="Dan-droids"> 
+                <img src="imagens/dan-droids.png" alt="Dan-droids"> 
             </picture>
 
             <p>
@@ -57,14 +57,14 @@
 
             <picture>
                 <source media="(max-width: 670px)" srcset="imagens/irina-blok-pq.jpg">
-                <img src="/imagens/irina-blok.jpg" alt="Irina Blok">  
+                <img src="imagens/irina-blok.jpg" alt="Irina Blok">  
             </picture>  
 
             <p>
                 A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.
             </p>     
 
-            <img src="/imagens/bugdroid.png" class="pequena" alt="Bug Droid">  
+            <img src="imagens/bugdroid.png" class="pequena" alt="Bug Droid">  
 
             <p>
                 A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
