--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -94,7 +94,7 @@
         </section>
 
     <footer>
-        <p>Site criado por <a href="#" target="_blank"><strong>Felps Mantelato</strong></a>.</p>
+        <p>Site criado por <a href="https://github.com/filipimantelato" target="_blank"><strong>Felps Mantelato</strong></a>.</p>
     </footer>
 </body>
 </html>
